Fixed text wrapping in pre tags in main.css.

--- a/alexdev/static/css/main.css
+++ b/alexdev/static/css/main.css
@@ -272,6 +272,8 @@ pre {
     border-left:2px solid #999;
     border-right:1px solid #CCC;
     border-bottom:1px solid #CCC;
+    overflow-x: scroll;
+    white-space: pre;
     }
 
 pre a:link {
